[tool.towncrier]
package = "trimeter"
filename = "docs/source/history.rst"
directory = "newsfragments"
underlines = ["-", "~", "^"]
issue_format = "`#{issue} <https://github.com/python-trio/trimeter/issues/{issue}>`__"

[build-system]
requires = [
    "setuptools >= 50.0.3",
    "wheel >= 0.35.1",
]
build-backend = "setuptools.build_meta"
